@@ -1,3 +1,5 @@
+* Improvement: Add generators for copying view templates into host application
+
 New in 0.0.12:
 
 * Improvement: Implement searching over string and email attributes
